🔧:Revisions to fix 💄🎨 alignment issues.

--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,5 @@
 }
 .App .container {
   flex-grow: 1;
-  padding: 0 60px;
+  padding: 1.28rem 60px 0;
 }
