--- a/src/components/Avatar.scss
+++ b/src/components/Avatar.scss
@@ -1,7 +1,7 @@
 .avatar {
   display: inline-block;
-  width: 50px;
-  height: 50px;
+  width: 3em;
+  height: 3em;
   border-radius: 50%;
   overflow: hidden;
   & img {
