--- a/src/components/Sidebar.scss
+++ b/src/components/Sidebar.scss
@@ -5,18 +5,22 @@
   min-height: 100vh;
   position: relative;
   color: #fff;
+  padding-top: 1.28rem;
   & .user {
     text-align: center;
     letter-spacing: 1px;
-    padding: 3.6em 0 2.76em 0; // 40px 30px;
+    // padding: 1rem 0 2.76em 0; // 40px 30px;
+    padding-bottom: 2em;
     border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+    margin-bottom: 4rem; // margin-top: 80px;
     // font-weight: bold;
     // height: 38px;
     // display: flex;  align-items: center;  justify-content: center;
-    // margin-bottom: 3rem;
+  }
+  & .avatar {
+    margin-bottom: 1em;
   }
   & .links {
-    margin-top: 4em; // margin-top: 80px;
     margin-left: 20px;
     & li {
       margin-top: 1em; // margin-top: 10px;
