--- a/src/index.css
+++ b/src/index.css
@@ -24,21 +24,22 @@ ul {
 }
 /* utils */
 .page-title {
-  font-size: 1em;
+  /* font-size: 1em; */
   color: var(--heading-color);
   display: inline-block;
 }
 
 /* button */
 .btn {
-  background: inherit; /* background: #fff; */
-  padding: 0.48em 0.7em; /* padding: 8px 12px; */
-  border-radius: 4px;
   color: var(--primary-color);
+  background-color: inherit; /* background: #fff; */
+  height: 2em;
+  padding: 0.32em 0.7em; /* padding: 8px 12px; */
+  font-size: 1em;
+  border: 1px solid var(--primary-color);
+  /* box-shadow:0px 0px 0px 1px var(--primary-color) inset; */
+  border-radius: 4px;
   cursor: pointer;
-  font-size: inherit;
-  border: none;
-  outline: 1px solid var(--primary-color);
 }
 .btn:hover,
 .btn:focus {
